# Agile-User-Story-Point-Estimation

./: AGENTS.md  Doc2VecFeature.py  Dockerfile  README.md  Word2VecFeature.py  docker-compose.yml  mongodbConnector.py  netskope-env.sh  package-lock.json  preprocessing.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/skills/: fine-tuning-assistant  log-analyzer
docs/: UV_MIGRATION_GUIDE.md  model_comparison.csv  per_project_results.csv  pipeline_execution_report.md
skills/: fine-tuning-assistant  log-analyzer
