[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agile-user-story-point-estimation"
version = "1.0.0"
description = "Machine learning system for estimating Agile story points from user story text using NLP embeddings and regression models"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Research Team"}
]
keywords = ["machine-learning", "nlp", "agile", "story-points", "tensorflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "catboost>=1.2.5",
    "gensim>=4.3.0", 
    "h5py>=3.8.0",
    "lightgbm>=4.5.0",
    "matplotlib>=3.8.0",
    "nltk>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "protobuf>=4.0.0,<6.0.0",
    "pymongo>=4.6.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "tables>=3.9.0",
    "tensorflow>=2.20.0",  # Latest version for Python 3.14 compatibility
]

[project.urls]
Homepage = "https://github.com/user/agile-user-story-point-estimation"
Documentation = "https://github.com/user/agile-user-story-point-estimation/blob/main/README.md"
Repository = "https://github.com/user/agile-user-story-point-estimation"
Issues = "https://github.com/user/agile-user-story-point-estimation/issues"

[project.scripts]
# Entry points for command-line usage if needed
preprocess = "preprocessing:main"
train-rf = "RandomForest:main"
train-lgbm = "lightGBM:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*", "dataset*", "models*"]

# uv-specific configuration
[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "black>=21.0.0", 
    "flake8>=3.8.0",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | models
  | dataset
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__", 
    "build",
    "dist",
    ".venv",
    "models",
    "dataset"
]